Update config for user site (clean URL)

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ title_separator          : "-"
 name                     : &name "Zhongzhu Chen"
 description              : &description "Applied Scientist at Amazon AGI | Ph.D. in Operations Research"
 url                      : https://zhongzhuchen.github.io
-baseurl                  : "/zhongzhuchen" # the subpath of your site, e.g. "/blog"
-repository               : "zhongzhuchen/zhongzhuchen"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
+repository               : "zhongzhuchen/zhongzhuchen.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
